# cpe442_lab2

./: .gitignore  Cargo.toml  README.md  rustup.results  send.sh
.cargo/: config.toml
src/: .my_arm_neon.rs.swp  lab5_simd.rs  lena_color-ezgif.com-gif-to-jpg-converter.jpg:Zone.Identifier  lib.rs  main.rs  mat_packet.rs  my_arm_neon.rs
src/old/: proto_greyscale_simd.rs  test_portable_simd_crate.rs
tools/docker/: rpi-xcompile.Dockerfile
