[package]
name = "cpe442_lab2"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = "0.93.1"
rayon = "1.10"


[lib]
name = "my_arm_neon"
path = "src/my_arm_neon.rs"

## Define binaries
[[bin]]
name = "lab5"
path = "src/lab5_simd.rs"


# Profiles
[profile.dev]
opt-level = 0 # No optimization for development
debug = true   # Include debug information

[profile.release]
opt-level = 3 # Max optimization for release


## You can also set options for specific binaries
#[profile.dev.binary1]
#opt-level = 1 # Custom optimization level for binary1 in dev profile

#[profile.release.binary2]
#opt-level = 2 # Custom optimization level for binary2 in release profile
