[package]
name = "cpe442_lab2"
version = "0.1.1"
edition = "2021"

[features]
default = []
debug = []

[dependencies]
bincode = "1.3.3"
opencv = { version = "0.93.4", default-features = false, features = ["highgui", "imgcodecs", "videoio"] }
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
zmq = "0.10"

[lib]
name = "lib"
path = "src/lib.rs"

# Profiles
[profile.dev]
opt-level = 0 # No optimization for development
debug = false   # Include debug information

[profile.release]
opt-level = 3 # Max optimization for release
debug = false   


## You can also set options for specific binaries
#[profile.dev.binary1]
#opt-level = 1 # Custom optimization level for binary1 in dev profile

#[profile.release.binary2]
#opt-level = 2 # Custom optimization level for binary2 in release profile
